# django-api-escola

./: README.md  pyproject.toml
escola/: admin.py  models.py  serializers.py  views.py
escola/migrations/: 0001_initial.py  0002_alter_estudante_cpf.py  0003_matricula.py
setup/: settings.py  urls.py
